[gd_scene load_steps=20 format=3 uid="uid://uvf3ppg3smev"]

[ext_resource type="Script" uid="uid://de3ikb265tx7a" path="res://GameItems/Entities/PlayerCharacter.gd" id="1_88lmo"]
[ext_resource type="PackedScene" uid="uid://bkh68d1nm7si7" path="res://GameItems/Components/hurtbox.tscn" id="2_2hpnf"]
[ext_resource type="Script" path="res://GameItems/rescources/ImportantStats.gd" id="2_3pkpc"]
[ext_resource type="Texture2D" uid="uid://dte6o2elxgr5i" path="res://Textures/spriteSheet.png" id="2_mw144"]
[ext_resource type="PackedScene" uid="uid://b8c3iae8i7kjo" path="res://GameItems/Components/health.tscn" id="3_mw144"]
[ext_resource type="PackedScene" uid="uid://baeqwhjus5ay3" path="res://GameItems/States/stateMachine.tscn" id="4_1mxt5"]
[ext_resource type="PackedScene" uid="uid://b545oyrybujlj" path="res://GameItems/States/Player/playerIdle.tscn" id="5_7skad"]
[ext_resource type="PackedScene" uid="uid://bbnob75h5r10i" path="res://GameItems/States/Player/playerMove.tscn" id="6_ah1mh"]
[ext_resource type="PackedScene" uid="uid://dr10bowde1d60" path="res://GameItems/Components/spawnerComponent.tscn" id="8_1mxt5"]
[ext_resource type="PackedScene" uid="uid://dfnbymqop1q7r" path="res://GameItems/Particles/HurtParticle.tscn" id="9_oivkm"]
[ext_resource type="PackedScene" uid="uid://x080sdocgejc" path="res://GameItems/Particles/ShootParticle.tscn" id="10_3pkpc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1jrtm"]
radius = 24.0

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2hpnf"]

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_mw144"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1mxt5"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7skad"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ah1mh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cs6y2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8hqiq"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_2hpnf")
states/Idle/position = Vector2(342, 82)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_mw144")
states/Run/position = Vector2(583, 94)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_1mxt5"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_7skad"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_ah1mh"), "Run", "End", SubResource("AnimationNodeStateMachineTransition_cs6y2")]

[node name="PlayerCharacter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_88lmo")
importantStats = ExtResource("2_3pkpc")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_mw144")
hframes = 4
region_enabled = true
region_rect = Rect2(0, 0, 192, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1jrtm")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_8hqiq")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Run/blend_position = Vector2(0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource("2_2hpnf")]
script = null

[node name="Health" parent="." instance=ExtResource("3_mw144")]

[node name="StateMachine" parent="." node_paths=PackedStringArray("state") instance=ExtResource("4_1mxt5")]
state = NodePath("playerIdle")

[node name="playerIdle" parent="StateMachine" node_paths=PackedStringArray("player", "animTree") instance=ExtResource("5_7skad")]
player = NodePath("../..")
animTree = NodePath("../../AnimationTree")

[node name="playerMove" parent="StateMachine" node_paths=PackedStringArray("player", "animTree") instance=ExtResource("6_ah1mh")]
player = NodePath("../..")
animTree = NodePath("../../AnimationTree")

[node name="spawnerComponent" parent="." instance=ExtResource("8_1mxt5")]

[node name="RecoilTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Particles" type="Node2D" parent="."]

[node name="HurtParticle" parent="Particles" instance=ExtResource("9_oivkm")]

[node name="ShootParticles" parent="Particles" instance=ExtResource("10_3pkpc")]
